--- a/mobile center/first.css
+++ b/mobile center/first.css
@@ -436,60 +436,51 @@ h2{
 }
 
 
-
-button {
-	outline: 0;
-	border: 0;
-	display: flex;
-	flex-direction: column;
-	width: 100%;
-	max-width: 140px;
+.btn {
+	width: 140px;
 	height: 50px;
-	border-radius: 0.5em;
-	box-shadow: 0 0.625em 1em 0 rgba(30, 143, 255, 0.35);
+	background: linear-gradient(to top, #00154c, #12376e, #23487f);
+	color: #fff;
+	border-radius: 50px;
+	border: none;
+	outline: none;
+	cursor: pointer;
+	position: relative;
+	box-shadow: 0 15px 30px rgba(0, 0, 0, 0.5);
 	overflow: hidden;
-   }
-   
-   button div {
-	transform: translateY(0px);
-	width: 10%;
-   }
-   
-   button,
-   button div {
-	transition: 0.6s cubic-bezier(.16,1,.3,1);
-   }
-   
-   button div span {
-	display: flex;
-	align-items: center;
-	justify-content: space-between;
-	height: 30px;
-	padding: 0.75em 1.125em;
-   }
-   
-   button div:nth-child(1) {
-	background-color: #1e90ff;
-   }
-   
-   button div:nth-child(2) {
-	background-color: #21dc62;
-   }
-   
-   button:hover {
-	box-shadow: 0 0.625em 1em 0 rgba(33, 220, 98, 0.35);
-   }
-   
-   button:hover div {
-	transform: translateY(-50px);
-   }
-   
-   button p {
-	font-size: 17px;
-	font-weight: bold;
-	color: #ffffff;
-   }
-   
-   button:active {
-	transform: scale(0.95);
-   }
+	margin-left: 880px;
+  }
+  
+  .btn span {
+	font-size: 12px;
+	text-transform: uppercase;
+	letter-spacing: 1px;
+	transition: top 0.5s;
+  }
+  
+  .btn-text-one {
+	position: absolute;
+	width: 100%;
+	top: 50%;
+	left: 0;
+	transform: translateY(-50%);
+	color:white;
+  }
+  
+  .btn-text-two {
+	position: absolute;
+	width: 100%;
+	top: 150%;
+	left: 0;
+	transform: translateY(-50%);
+	color:white;
+  }
+  
+  .btn:hover .btn-text-one {
+	top: -100%;
+  }
+  
+  .btn:hover .btn-text-two {
+	top: 50%;
+  }
+  
