--- a/mobile center/book.css
+++ b/mobile center/book.css
@@ -434,3 +434,18 @@ h1
  {
    color: aliceblue;
  }
+
+ .bttn {
+	width: 140px;
+	height: 50px;
+	background: linear-gradient(to top, #00154c, #12376e, #23487f);
+	color: #fff;
+	border-radius: 50px;
+	border: none;
+	outline: none;
+	cursor: pointer;
+	position: relative;
+	box-shadow: 0 15px 30px rgba(0, 0, 0, 0.5);
+	overflow: hidden;
+	margin-left: 880px;
+  }
